--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 layout: page
 title: Projects
 ---
+<p>This is a compilation of my industry experience, research papers, and side projects</p>
 <section class="list">
     {% for post in site.posts %}
         {% if post.projects %}
