--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 title: Projects
 ---
-<p>This is a compilation of my industry experience, research papers, and side projects</p>
+<h2 class="description">This is a concoction of my industry experiences, research papers, and side projects.</h2>
 <section class="list">
     {% for post in site.posts %}
         {% if post.projects %}
