--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 layout: page
 title: Projects
 ---
-<p class="description">This is a concoction of my industry experiences, research papers, and side projects.</p>
+<p align="center">This is a concoction of my industry experiences, research papers, and side projects.</p>
 <section class="list">
     {% for post in site.posts %}
         {% if post.projects %}
